<resources>
    <string name="app_name">融汇.汇生活</string>
    <string name="ac_main">融汇.汇生活</string>
    <string name="ac_post_list">帖子列表</string>
    <string name="ac_post_detail">帖子详情</string>
    <string name="ac_property_complain">物业投诉</string>
    <string name="ac_house_trade">交易委托</string>
    <string name="ac_property_bill">物业账单</string>
    <string name="ac_property_repairs">物业报修</string>
    <string name="ac_property_praise">物业表扬</string>
    <string name="ac_scan">扫一扫</string>
    <string name="ac_msg_center">消息中心</string>
    <string name="ac_login">登录</string>
    <string name="ac_register">注册</string>
    <string name="ac_reset_password">重置密码</string>
    <string name="ac_feedbak">意见反馈</string>
    <string name="ac_modify_password">修改密码</string>
    <string name="ac_setting">设置</string>
    <string name="ac_register_invite">注册邀请</string>
    <string name="ac_my_express">我的快递</string>
    <string name="ac_bulletin">社区公告</string>
    <string name="ac_community_interaction">社区互动</string>
    <string name="ac_property">物业服务</string>
   	<string name="ac_public_info">融汇新品</string>
    <string name="ac_law_rule">法律法规</string>
   	<string name="ac_law_rule_detial">物业法规</string>
   	<string name="ac_apply">报名</string>
   	<string name="ac_post">我要发帖</string>
   	<string name="ac_house_trade_list">房屋交易</string>
   	<string name="ac_personal">个人中心</string>
   	<string name="ac_img_browser">图片浏览</string>
    <string name="empty_toast">暂无内容哦</string>
    <string name="bottom_bar_home">首页</string>
    <string name="bottom_bar_discover">发现</string>
    <string name="bottom_bar_post">贴子</string>
    <string name="bottom_bar_steward">物业服务</string>
    <string name="bottom_bar_center">个人中心</string>
    <string name="barcode_scan">正在识别...</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="hint_feedback">您的意见对我们很重要，请提出您的宝贵意见\n我们会做的更好••••••</string>
    <string name="hint_personal_edit">请您在这里输入••••••</string>
    <string-array name="post_type">
        <item>社区分享</item>
        <item>共建家园</item>
        <item>邻里互助</item>
        <item>社区雷锋</item>
    </string-array>
    <string-array name="spinnername">
        <item>餐饮类</item>
        <item>文具</item>
        <item>住宿类</item>
    </string-array>
    <string-array name="property_complain_type">
        <item>安全秩序</item>
        <item>清洁绿化</item>
        <item>设施设备</item>
        <item>物业人员</item>
        <item>其他</item>
    </string-array>
    <string-array name="property_repairs_time">
        <item>9:00~10:00</item>
        <item>10:00~11:00</item>
        <item>11:00~12:00</item>
        <item>14:00~15:00</item>
        <item>15:00~16:00</item>
        <item>16:00~17:00</item>
        <item>17:00~18:00</item>
        <item>18:00~19:00</item>
    </string-array>
    <string-array name="house_trade_type">
        <item>出售</item>
        <item>求购</item>
        <item>出租</item>
        <item>求租</item>        
    </string-array>
    <string-array name="house_trade_type_index">
        <item>01</item>
        <item>02</item>
        <item>04</item>
        <item>03</item>        
    </string-array>
     <string-array name="my_complaint">
        <item>全部</item>
        <item>已受理</item>
        <item>已处理</item>
    </string-array>
	 <string-array name="msg_type">
        <item>全部</item>
        <item>社区公告</item>
        <item>系统消息</item>
        <item>缴费通知</item>
        <item>我的快递</item>
        <item>物业投诉处理</item>
        <item>物业报修处理</item>
    </string-array>
	 <string-array name="bill_name">
	     <item>业主姓名：</item>
	     <item>所在小区：</item>
	     <item>楼&#160;&#160;栋&#160;&#160;号：</item>
	     <item>房&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</item>
	     <item>面&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;积：</item>
	     <item>物业单价：</item>
	     <item>起止时间：</item>
	     <item>费用合计：</item>
	 </string-array>
	<string-array name="spinner_distance">
        <item>100米</item>
        <item>200米</item>
        <item>300米</item>
        <item>400米</item>
    </string-array>
    <string name="hint_username">请输入想修改的昵称</string>
    <string name="hint_userphone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_again">请再次输入密码确认</string>
    <string name="hint_old_password">请输入登录密码</string>
    <string name="hint_new_password">请输入新的登录密码</string>
    <string name="hint_verify_code">请输入短信验证码</string>
    <string name="hint_new_password_again">请再次输入新的登录密码</string>
    <string name="login">登录</string>
    <string name="auto_login">自动登录中。。。</string>
    <string name="login_success">登录成功</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="register_fail">注册失败，请重试</string>
    <string name="forget_password">忘记密码?</string>
    <string name="username_empty_toast">用户名不能为空</string>
    <string name="username_error">手机号格式不正确</string>
    <string name="phone_empty_toast">手机号不能为空</string>
    <string name="password_empty_toast">密码不能为空</string>
    <string name="password_again_empty_toast">确认密码不能为空</string>
    <string name="password_no_equasl">密码两次输入不一致</string>
    <string name="password_no_length">密码的长度不足%1$d位</string>
    <string name="verify_empty_toast">验证码不能为空</string>
    <string name="verify_no_length">验证码长度不足6位</string>
    <string name="verify_send_success">短信验证码发送成功，请注意查收</string>
    <string name="need_login_toast">您需要先登录才能使用收藏哦~</string>
    <string name="protocol_no_check">请同意我们的协议才可注册</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="next">下一步</string>
    <string name="nickname_empty_toast">昵称不能为空</string>
    <string name="nickname_modify_success">昵称修改成功</string>
    <string name="password_modify_success">密码修改成功</string>
    <string name="gender_modify_success">性别修改成功</string>
    <string name="logout">退出当前账号</string>
    <string name="please_login">请先登录</string>
    <string name="loging_toast">正在登录中，请稍候...</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">待用</string>
    <string name="preferences_front_light_on">活跃</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_try_bsplus">尝试条码扫描器+</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="update_tips">版本更新提示</string>
</resources>