<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_color" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <android.support.v4.view.ViewPager
                android:id="@+id/content_pager"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <!-- 底部一级菜单栏 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_bar_height"
                android:background="@drawable/bottom_bar_bg"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.5dp"
                        android:src="@drawable/bottom_icon_home_selector" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/bottom_bar_home"
                        android:textColor="@color/bottom_bar_text_selector"
                        android:textSize="@dimen/bottom_bar_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/discover"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.5dp"
                        android:src="@drawable/bottom_icon_discover_selector" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/bottom_bar_discover"
                        android:textColor="@color/bottom_bar_text_selector"
                        android:textSize="@dimen/bottom_bar_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/steward"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.5dp"
                        android:src="@drawable/bottom_icon_steward_selector" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/bottom_bar_steward"
                        android:textColor="@color/bottom_bar_text_selector"
                        android:textSize="@dimen/bottom_bar_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.5dp"
                        android:src="@drawable/bottom_icon_center_selector" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/bottom_bar_center"
                        android:textColor="@color/bottom_bar_text_selector"
                        android:textSize="@dimen/bottom_bar_text_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_bar_post_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bottom_icon_post_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/bottom_bar_post"
                android:textColor="@color/bottom_bar_text_selector"
                android:textSize="@dimen/bottom_bar_text_size" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>